Api server giao diện
